Fixed z-index safari #3

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -10,6 +10,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   margin-bottom: 200px;
   overflow: visible;
+  -webkit-overflow-scrolling: auto !important;
 }
 
 * {    
